Actualizar el notebook con los últimos análisis de datos

--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -350,43 +350,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\RONALD\\AppData\\Local\\Temp\\ipykernel_35828\\993047594.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  df = df.applymap(lambda x: x.upper() )\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = df.applymap(lambda x: x.upper() )\n"
+    "df = df.map(lambda x: x.upper() )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\RONALD\\AppData\\Local\\Temp\\ipykernel_35828\\381498316.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  df=df.applymap(lambda x:x.strip() )\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df=df.applymap(lambda x:x.strip() )"
+    "df=df.map(lambda x:x.strip() )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +607,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#GRAFICOS"
+    "# GRAFICOS "
    ]
   },
   {
@@ -695,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
